syntax = "proto3";

option csharp_namespace = "AirAware.Shared.Protos";

package weather;

service WeatherProcessor {
  rpc GetStressScore (WeatherRequest) returns (WeatherReply);
}

message WeatherRequest {
  string airport_code = 1;
  double flight_duration = 2;
  string location_name = 3; 
}

message WeatherReply {
  int32 stress_score = 1;
  string recommendation = 2;
  double temperature = 3;
  double wind_speed = 4;
}